// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterHelpers should handle location search and hash passthrough values: NO search and hash 1`] = `
Object {
  "routeHref": "/rhel",
}
`;

exports[`RouterHelpers should handle location search and hash passthrough values: hash 1`] = `
Object {
  "routeHref": "/rhel#lorem",
}
`;

exports[`RouterHelpers should handle location search and hash passthrough values: search 1`] = `
Object {
  "routeHref": "/rhel?dolor=sit",
}
`;

exports[`RouterHelpers should handle location search and hash passthrough values: search and hash 1`] = `
Object {
  "routeHref": "/rhel?dolor=sit#lorem",
}
`;

exports[`RouterHelpers should return a generated baseName using NO path prefix: app lorem route name 1`] = `"/appName"`;

exports[`RouterHelpers should return a generated baseName using NO path prefix: empty pathPrefix: app base name 1`] = `"/appName"`;

exports[`RouterHelpers should return a generated baseName using a beta path prefix: beta app base name 1`] = `"/beta/appName"`;

exports[`RouterHelpers should return a generated baseName using a beta path prefix: beta app lorem route name 1`] = `"/beta/appName"`;

exports[`RouterHelpers should return a generated baseName using an insights path prefix: insights, app base name 1`] = `"/insights/appName"`;

exports[`RouterHelpers should return a generated baseName using an insights path prefix: insights, app lorem route name 1`] = `"/insights/appName"`;

exports[`RouterHelpers should return a generated baseName using an insights path prefix: insights, beta app base name 1`] = `"/beta/insights/appName"`;

exports[`RouterHelpers should return a generated baseName using an insights path prefix: insights, beta app lorem route name 1`] = `"/beta/insights/appName"`;

exports[`RouterHelpers should return a generated basePath: insights, app base path 1`] = `"/insights/"`;

exports[`RouterHelpers should return a generated basePath: insights, app lorem route name base path 1`] = `"/insights/"`;

exports[`RouterHelpers should return a generated basePath: insights, beta app base path 1`] = `"/beta/insights/"`;

exports[`RouterHelpers should return a generated basePath: insights, beta app lorem route name base path 1`] = `"/beta/insights/"`;

exports[`RouterHelpers should return an error route: error route 1`] = `
Object {
  "activateOnError": true,
  "component": "optinView/optinView",
  "disabled": false,
  "exact": true,
  "id": "optin",
  "path": "/optin",
  "redirect": null,
}
`;

exports[`RouterHelpers should return default navigation and route details: detail: defaults 1`] = `
Object {
  "navRoute": Object {
    "allConfigs": Array [
      Object {
        "activateOnError": false,
        "aliases": Array [
          "insights",
        ],
        "component": "productView/productViewRhel",
        "default": false,
        "disabled": false,
        "id": "rhel",
        "isSearchable": true,
        "path": "/rhel",
        "pathParameter": Array [
          "RHEL",
        ],
        "productParameter": Array [
          "RHEL",
        ],
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewRhel",
        "default": false,
        "disabled": false,
        "id": "rhel-arm",
        "isSearchable": false,
        "path": "/rhel-arm",
        "pathParameter": "RHEL for ARM",
        "productParameter": "RHEL",
        "redirect": null,
        "routeHref": "/rhel-arm",
        "viewParameter": "viewRHEL",
      },
      Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewRhel",
        "default": false,
        "disabled": false,
        "id": "rhel-ibmpower",
        "isSearchable": false,
        "path": "/rhel-ibmpower",
        "pathParameter": Array [
          "RHEL for IBM Power",
        ],
        "productParameter": Array [
          "RHEL",
        ],
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewRhel",
        "default": false,
        "disabled": false,
        "id": "rhel-ibmz",
        "isSearchable": false,
        "path": "/rhel-ibmz",
        "pathParameter": Array [
          "RHEL for IBM z",
        ],
        "productParameter": Array [
          "RHEL",
        ],
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewRhel",
        "default": false,
        "disabled": false,
        "id": "rhel-x86",
        "isSearchable": false,
        "path": "/rhel-x86",
        "pathParameter": Array [
          "RHEL for x86",
        ],
        "productParameter": Array [
          "RHEL",
        ],
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewOpenShiftContainer",
        "default": false,
        "disabled": false,
        "id": "openshift-container",
        "isSearchable": true,
        "path": "/openshift-container",
        "pathParameter": Array [
          "OpenShift Container Platform",
          "OpenShift-metrics",
        ],
        "productParameter": Array [
          "OpenShift Container Platform",
          "OpenShift-metrics",
        ],
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewOpenShiftDedicated",
        "default": false,
        "disabled": false,
        "id": "openshift-dedicated",
        "isSearchable": true,
        "path": "/openshift-dedicated",
        "pathParameter": Array [
          "OpenShift-dedicated-metrics",
        ],
        "productParameter": Array [
          "OpenShift-dedicated-metrics",
        ],
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewSatellite",
        "default": false,
        "disabled": false,
        "id": "satellite",
        "isSearchable": false,
        "path": "/satellite",
        "pathParameter": Array [
          "Satellite",
        ],
        "productParameter": Array [
          "Satellite",
        ],
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewSatellite",
        "default": false,
        "disabled": false,
        "id": "satellite-capsule",
        "isSearchable": false,
        "path": "/satellite-capsule",
        "pathParameter": Array [
          "Satellite Capsule",
        ],
        "productParameter": Array [
          "Satellite",
        ],
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewSatellite",
        "default": false,
        "disabled": false,
        "id": "satellite-server",
        "isSearchable": false,
        "path": "/satellite-server",
        "pathParameter": Array [
          "Satellite Server",
        ],
        "productParameter": Array [
          "Satellite",
        ],
        "redirect": null,
      },
      Object {
        "activateOnError": true,
        "aliases": Array [],
        "component": "optinView/optinView",
        "default": false,
        "disabled": false,
        "id": "optin",
        "isSearchable": false,
        "path": "/optin",
        "pathParameter": null,
        "productParameter": null,
        "redirect": null,
        "routeHref": "/optin",
        "viewParameter": null,
      },
      Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewMissing",
        "default": true,
        "disabled": false,
        "id": "missing",
        "isSearchable": false,
        "path": "/",
        "pathParameter": null,
        "productParameter": null,
        "redirect": "/",
        "routeHref": "/",
        "viewParameter": null,
      },
    ],
    "allConfigsById": Object {
      "missing": Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewMissing",
        "default": true,
        "disabled": false,
        "id": "missing",
        "isSearchable": false,
        "path": "/",
        "pathParameter": null,
        "productParameter": null,
        "redirect": "/",
        "routeHref": "/",
        "viewParameter": null,
      },
      "openshift-container": Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewOpenShiftContainer",
        "default": false,
        "disabled": false,
        "id": "openshift-container",
        "isSearchable": true,
        "path": "/openshift-container",
        "pathParameter": Array [
          "OpenShift Container Platform",
          "OpenShift-metrics",
        ],
        "productParameter": Array [
          "OpenShift Container Platform",
          "OpenShift-metrics",
        ],
        "redirect": null,
      },
      "openshift-dedicated": Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewOpenShiftDedicated",
        "default": false,
        "disabled": false,
        "id": "openshift-dedicated",
        "isSearchable": true,
        "path": "/openshift-dedicated",
        "pathParameter": Array [
          "OpenShift-dedicated-metrics",
        ],
        "productParameter": Array [
          "OpenShift-dedicated-metrics",
        ],
        "redirect": null,
      },
      "optin": Object {
        "activateOnError": true,
        "aliases": Array [],
        "component": "optinView/optinView",
        "default": false,
        "disabled": false,
        "id": "optin",
        "isSearchable": false,
        "path": "/optin",
        "pathParameter": null,
        "productParameter": null,
        "redirect": null,
        "routeHref": "/optin",
        "viewParameter": null,
      },
      "rhel": Object {
        "activateOnError": false,
        "aliases": Array [
          "insights",
        ],
        "component": "productView/productViewRhel",
        "default": false,
        "disabled": false,
        "id": "rhel",
        "isSearchable": true,
        "path": "/rhel",
        "pathParameter": Array [
          "RHEL",
        ],
        "productParameter": Array [
          "RHEL",
        ],
        "redirect": null,
      },
      "rhel-arm": Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewRhel",
        "default": false,
        "disabled": false,
        "id": "rhel-arm",
        "isSearchable": false,
        "path": "/rhel-arm",
        "pathParameter": "RHEL for ARM",
        "productParameter": "RHEL",
        "redirect": null,
        "routeHref": "/rhel-arm",
        "viewParameter": "viewRHEL",
      },
      "rhel-ibmpower": Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewRhel",
        "default": false,
        "disabled": false,
        "id": "rhel-ibmpower",
        "isSearchable": false,
        "path": "/rhel-ibmpower",
        "pathParameter": Array [
          "RHEL for IBM Power",
        ],
        "productParameter": Array [
          "RHEL",
        ],
        "redirect": null,
      },
      "rhel-ibmz": Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewRhel",
        "default": false,
        "disabled": false,
        "id": "rhel-ibmz",
        "isSearchable": false,
        "path": "/rhel-ibmz",
        "pathParameter": Array [
          "RHEL for IBM z",
        ],
        "productParameter": Array [
          "RHEL",
        ],
        "redirect": null,
      },
      "rhel-x86": Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewRhel",
        "default": false,
        "disabled": false,
        "id": "rhel-x86",
        "isSearchable": false,
        "path": "/rhel-x86",
        "pathParameter": Array [
          "RHEL for x86",
        ],
        "productParameter": Array [
          "RHEL",
        ],
        "redirect": null,
      },
      "satellite": Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewSatellite",
        "default": false,
        "disabled": false,
        "id": "satellite",
        "isSearchable": false,
        "path": "/satellite",
        "pathParameter": Array [
          "Satellite",
        ],
        "productParameter": Array [
          "Satellite",
        ],
        "redirect": null,
      },
      "satellite-capsule": Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewSatellite",
        "default": false,
        "disabled": false,
        "id": "satellite-capsule",
        "isSearchable": false,
        "path": "/satellite-capsule",
        "pathParameter": Array [
          "Satellite Capsule",
        ],
        "productParameter": Array [
          "Satellite",
        ],
        "redirect": null,
      },
      "satellite-server": Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewSatellite",
        "default": false,
        "disabled": false,
        "id": "satellite-server",
        "isSearchable": false,
        "path": "/satellite-server",
        "pathParameter": Array [
          "Satellite Server",
        ],
        "productParameter": Array [
          "Satellite",
        ],
        "redirect": null,
      },
    },
    "configs": Array [],
    "configsById": Object {},
    "firstMatch": undefined,
  },
}
`;

exports[`RouterHelpers should return navigation and route details from a path: detail: match specific path 1`] = `
Object {
  "navRoute": Object {
    "activateOnError": false,
    "aliases": Array [
      "insights",
    ],
    "component": "productView/productViewRhel",
    "default": false,
    "disabled": false,
    "id": "rhel",
    "isSearchable": true,
    "path": "/rhel",
    "pathParameter": Array [
      "RHEL",
    ],
    "productParameter": Array [
      "RHEL",
    ],
    "redirect": null,
  },
}
`;

exports[`RouterHelpers should return navigation and route details from a path: detail: missing parameters 1`] = `
Object {
  "navRoute": undefined,
}
`;

exports[`RouterHelpers should return navigation and route details from a path: detail: missing pathName 1`] = `
Object {
  "navRoute": undefined,
}
`;

exports[`RouterHelpers should return navigation and route details from a path: detail: specific product path 1`] = `
Object {
  "navRoute": Object {
    "activateOnError": false,
    "aliases": Array [],
    "component": "productView/productViewRhel",
    "default": false,
    "disabled": false,
    "id": "rhel-arm",
    "isSearchable": false,
    "path": "/rhel-arm",
    "pathParameter": "RHEL for ARM",
    "productParameter": "RHEL",
    "redirect": null,
    "routeHref": "/rhel-arm",
    "viewParameter": "viewRHEL",
  },
}
`;

exports[`RouterHelpers should return navigation and route details from a related name: detail: match related name 1`] = `
Object {
  "navRoute": Object {
    "activateOnError": false,
    "aliases": Array [],
    "component": "productView/productViewRhel",
    "default": false,
    "disabled": false,
    "id": "rhel-arm",
    "isSearchable": false,
    "path": "/rhel-arm",
    "pathParameter": "RHEL for ARM",
    "productParameter": "RHEL",
    "redirect": null,
    "routeHref": "/rhel-arm",
    "viewParameter": "viewRHEL",
  },
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: match specific path navigation 1`] = `
Object {
  "navRoute": Object {
    "activateOnError": false,
    "aliases": Array [
      "insights",
    ],
    "component": "productView/productViewRhel",
    "default": false,
    "disabled": false,
    "id": "rhel",
    "isSearchable": true,
    "path": "/rhel",
    "pathParameter": "RHEL",
    "productParameter": "RHEL",
    "redirect": null,
    "routeHref": "/rhel",
    "viewParameter": "viewRHEL",
  },
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing ID, specific path 1`] = `
Object {
  "navRoute": Object {
    "activateOnError": false,
    "aliases": Array [
      "insights",
    ],
    "component": "productView/productViewRhel",
    "default": false,
    "disabled": false,
    "id": "rhel",
    "isSearchable": true,
    "path": "/rhel",
    "pathParameter": "RHEL",
    "productParameter": "RHEL",
    "redirect": null,
    "routeHref": "/rhel",
    "viewParameter": "viewRHEL",
  },
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing id and pathName and default 1`] = `
Object {
  "navRoute": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing id and pathName, default 1`] = `
Object {
  "navRoute": Object {
    "activateOnError": false,
    "aliases": Array [],
    "component": "productView/productViewMissing",
    "default": true,
    "disabled": false,
    "id": "missing",
    "isSearchable": false,
    "path": "/",
    "pathParameter": null,
    "productParameter": null,
    "redirect": "/",
    "routeHref": "/",
    "viewParameter": null,
  },
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing parameters 1`] = `
Object {
  "navRoute": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: specific navigation ID 1`] = `
Object {
  "navRoute": Object {
    "activateOnError": false,
    "aliases": Array [],
    "component": "productView/productViewRhel",
    "default": false,
    "disabled": false,
    "id": "rhel-arm",
    "isSearchable": false,
    "path": "/rhel-arm",
    "pathParameter": "RHEL for ARM",
    "productParameter": "RHEL",
    "redirect": null,
    "routeHref": "/rhel-arm",
    "viewParameter": "viewRHEL",
  },
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: specific route ID 1`] = `
Object {
  "navRoute": Object {
    "activateOnError": true,
    "aliases": Array [],
    "component": "optinView/optinView",
    "default": false,
    "disabled": false,
    "id": "optin",
    "isSearchable": false,
    "path": "/optin",
    "pathParameter": null,
    "productParameter": null,
    "redirect": null,
    "routeHref": "/optin",
    "viewParameter": null,
  },
}
`;

exports[`RouterHelpers should return specific properties: routerHelpers 1`] = `
Object {
  "appName": "subscriptions",
  "baseName": "/",
  "basePath": "/",
  "dynamicBaseName": [Function],
  "dynamicBasePath": [Function],
  "generateProductGroups": [Function],
  "generateRoutes": [Function],
  "getErrorRoute": Object {
    "activateOnError": true,
    "component": "optinView/optinView",
    "disabled": false,
    "exact": true,
    "id": "optin",
    "path": "/optin",
    "redirect": null,
  },
  "getRouteConfig": [Function],
  "getRouteConfigByPath": [Function],
  "platformLandingRedirect": "/",
  "platformModalRedirect": "/?not_entitled=subscriptions",
  "productGroups": Object {
    "viewOpenShift Container Platform": Array [
      "OpenShift Container Platform",
    ],
    "viewOpenShift-dedicated-metrics": Array [
      "OpenShift-dedicated-metrics",
    ],
    "viewOpenShift-metrics": Array [
      "OpenShift-metrics",
    ],
    "viewRHEL": Array [
      "RHEL",
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
    ],
    "viewSatellite": Array [
      "Satellite",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  "routes": Array [
    Object {
      "activateOnError": false,
      "component": "productView/productViewRhel",
      "disabled": false,
      "exact": true,
      "id": "rhel",
      "path": "/rhel",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productViewRhel",
      "disabled": false,
      "exact": true,
      "id": "rhel-arm",
      "path": "/rhel-arm",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productViewRhel",
      "disabled": false,
      "exact": true,
      "id": "rhel-ibmpower",
      "path": "/rhel-ibmpower",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productViewRhel",
      "disabled": false,
      "exact": true,
      "id": "rhel-ibmz",
      "path": "/rhel-ibmz",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productViewRhel",
      "disabled": false,
      "exact": true,
      "id": "rhel-x86",
      "path": "/rhel-x86",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productViewOpenShiftContainer",
      "disabled": false,
      "exact": true,
      "id": "openshift-container",
      "path": "/openshift-container",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productViewOpenShiftDedicated",
      "disabled": false,
      "exact": true,
      "id": "openshift-dedicated",
      "path": "/openshift-dedicated",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productViewSatellite",
      "disabled": false,
      "exact": true,
      "id": "satellite",
      "path": "/satellite",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productViewSatellite",
      "disabled": false,
      "exact": true,
      "id": "satellite-capsule",
      "path": "/satellite-capsule",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productViewSatellite",
      "disabled": false,
      "exact": true,
      "id": "satellite-server",
      "path": "/satellite-server",
      "redirect": null,
    },
    Object {
      "activateOnError": true,
      "component": "optinView/optinView",
      "disabled": false,
      "exact": true,
      "id": "optin",
      "path": "/optin",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productViewMissing",
      "disabled": false,
      "exact": true,
      "id": "missing",
      "path": "/",
      "redirect": "/",
    },
  ],
  "routesConfig": Array [
    Object {
      "activateOnError": false,
      "aliases": Array [
        "insights",
      ],
      "component": "productView/productViewRhel",
      "default": false,
      "disabled": false,
      "id": "rhel",
      "isSearchable": true,
      "path": "/rhel",
      "pathParameter": Array [
        "RHEL",
      ],
      "productParameter": Array [
        "RHEL",
      ],
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "aliases": Array [],
      "component": "productView/productViewRhel",
      "default": false,
      "disabled": false,
      "id": "rhel-arm",
      "isSearchable": false,
      "path": "/rhel-arm",
      "pathParameter": Array [
        "RHEL for ARM",
      ],
      "productParameter": Array [
        "RHEL",
      ],
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "aliases": Array [],
      "component": "productView/productViewRhel",
      "default": false,
      "disabled": false,
      "id": "rhel-ibmpower",
      "isSearchable": false,
      "path": "/rhel-ibmpower",
      "pathParameter": Array [
        "RHEL for IBM Power",
      ],
      "productParameter": Array [
        "RHEL",
      ],
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "aliases": Array [],
      "component": "productView/productViewRhel",
      "default": false,
      "disabled": false,
      "id": "rhel-ibmz",
      "isSearchable": false,
      "path": "/rhel-ibmz",
      "pathParameter": Array [
        "RHEL for IBM z",
      ],
      "productParameter": Array [
        "RHEL",
      ],
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "aliases": Array [],
      "component": "productView/productViewRhel",
      "default": false,
      "disabled": false,
      "id": "rhel-x86",
      "isSearchable": false,
      "path": "/rhel-x86",
      "pathParameter": Array [
        "RHEL for x86",
      ],
      "productParameter": Array [
        "RHEL",
      ],
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "aliases": Array [],
      "component": "productView/productViewOpenShiftContainer",
      "default": false,
      "disabled": false,
      "id": "openshift-container",
      "isSearchable": true,
      "path": "/openshift-container",
      "pathParameter": Array [
        "OpenShift Container Platform",
        "OpenShift-metrics",
      ],
      "productParameter": Array [
        "OpenShift Container Platform",
        "OpenShift-metrics",
      ],
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "aliases": Array [],
      "component": "productView/productViewOpenShiftDedicated",
      "default": false,
      "disabled": false,
      "id": "openshift-dedicated",
      "isSearchable": true,
      "path": "/openshift-dedicated",
      "pathParameter": Array [
        "OpenShift-dedicated-metrics",
      ],
      "productParameter": Array [
        "OpenShift-dedicated-metrics",
      ],
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "aliases": Array [],
      "component": "productView/productViewSatellite",
      "default": false,
      "disabled": false,
      "id": "satellite",
      "isSearchable": false,
      "path": "/satellite",
      "pathParameter": Array [
        "Satellite",
      ],
      "productParameter": Array [
        "Satellite",
      ],
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "aliases": Array [],
      "component": "productView/productViewSatellite",
      "default": false,
      "disabled": false,
      "id": "satellite-capsule",
      "isSearchable": false,
      "path": "/satellite-capsule",
      "pathParameter": Array [
        "Satellite Capsule",
      ],
      "productParameter": Array [
        "Satellite",
      ],
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "aliases": Array [],
      "component": "productView/productViewSatellite",
      "default": false,
      "disabled": false,
      "id": "satellite-server",
      "isSearchable": false,
      "path": "/satellite-server",
      "pathParameter": Array [
        "Satellite Server",
      ],
      "productParameter": Array [
        "Satellite",
      ],
      "redirect": null,
    },
    Object {
      "activateOnError": true,
      "aliases": Array [],
      "component": "optinView/optinView",
      "default": false,
      "disabled": false,
      "id": "optin",
      "isSearchable": false,
      "path": "/optin",
      "pathParameter": null,
      "productParameter": null,
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "aliases": Array [],
      "component": "productView/productViewMissing",
      "default": true,
      "disabled": false,
      "id": "missing",
      "isSearchable": false,
      "path": "/",
      "pathParameter": null,
      "productParameter": null,
      "redirect": "/",
    },
  ],
}
`;
